--- a/MacOSX/Brewfile
+++ b/MacOSX/Brewfile
@@ -1,32 +1,48 @@
 update
 upgrade
 
-install coreutils
-install curl
-install freetype
-install fzf
-install gibo
-install git
-install go
-install jq
-install libevent
-install libpng
-install libtiff
-install libtool
-install nkf
-install oniguruma
-install openssl
-install pidcat
-install readline
-install rbenv
-install reattach-to-user-namespace
-install sqlite
-install sqlitebrowser
-install tldr
-install tmux
-install tree
-install vim
-install xz
-install zsh-completions
+tap caskroom/fonts
+tap homebrew/dupes
+tap homebrew/python
+tap homebrew/science
+tap josegonzalez/php
+tap peco/peco
+tap phinze/cask
+tap tldr-pages/tldr
+
+cask 'font-roboto'
+cask 'font-noto-sans-japanese'
+cask 'font-noto-sans-english'
+cask 'font-noto-sans'
+cask 'font-noto-serif'
+cask 'font-source-han-code-jp'
+
+brew 'coreutils'
+brew 'curl'
+brew 'freetype'
+brew 'fzf'
+brew 'gibo'
+brew 'git'
+brew 'go'
+brew 'jq'
+brew 'libevent'
+brew 'libpng'
+brew 'libtiff'
+brew 'libtool'
+brew 'nkf'
+brew 'oniguruma'
+brew 'openssl'
+brew 'pidcat'
+brew 'readline'
+brew 'rbenv'
+brew 'reattach-to-user-namespace'
+brew 'sqlite'
+brew 'sqlitebrowser'
+brew 'tldr'
+brew 'tmux'
+brew 'tree'
+brew 'vim'
+brew 'xz'
+brew 'zsh-completions'
 
 clean
