--- a/.gitconfig
+++ b/.gitconfig
@@ -25,3 +25,9 @@
     keepBackup = false
 [commit]
     template = ~/.gitmessage.txt
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
