--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -6,43 +6,34 @@ tap homebrew/dupes
 tap homebrew/python
 tap homebrew/science
 tap josegonzalez/php
-tap peco/peco
 tap phinze/cask
 tap tldr-pages/tldr
 
-cask 'font-roboto'
-cask 'font-noto-sans-japanese'
-cask 'font-noto-sans-english'
-cask 'font-noto-sans'
-cask 'font-noto-serif'
 cask 'font-source-han-code-jp'
 
 brew 'coreutils'
 brew 'curl'
 brew 'freetype'
-brew 'fzf'
 brew 'gibo'
 brew 'git'
 brew 'go'
-brew 'jq'
 brew 'libevent'
 brew 'libpng'
 brew 'libtiff'
 brew 'libtool'
+brew 'lua'
 brew 'nkf'
 brew 'oniguruma'
 brew 'openssl'
 brew 'pidcat'
 brew 'readline'
-brew 'rbenv'
 brew 'reattach-to-user-namespace'
 brew 'sqlite'
 brew 'sqlitebrowser'
 brew 'tldr'
 brew 'tmux'
 brew 'tree'
-brew 'vim'
+brew 'vim' args: ['with-lua']
 brew 'xz'
-brew 'zsh-completions'
 
 clean
