--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -45,44 +45,96 @@ bind -r L resize-pane -R 5
 # 256色
 set -g default-terminal "screen-256color"
 
-# ステータスバーの色を設定する
-set -g status-fg white
-set -g status-bg black
+#### Thanks!! 
+#### http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
+# panes
+set -g pane-border-fg black
+set -g pane-active-border-fg brightred
 
-# ウィンドウリストの色を設定する
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
-# アクティブなウィンドウを目立たせる
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
+## Status bar design
+# status line
+set -g status-utf8 on
+set -g status-justify left
+set -g status-bg default
+set -g status-fg colour12
+set -g status-interval 2
 
-# ペインボーダーの色を設定する
-set -g pane-border-fg green
-set -g pane-border-bg black
-# アクティブなペインを目立たせる
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
+# messaging
+set -g message-fg black
+set -g message-bg yellow
+set -g message-command-fg blue
+set -g message-command-bg black
 
-# コマンドラインの色を設定する
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+#window mode
+setw -g mode-bg colour6
+setw -g mode-fg colour0
 
-# ステータスバーを設定する
-## 左パネルを設定する
-set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-## 右パネルを設定する
-set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
-## リフレッシュの間隔を設定する(デフォルト 15秒)
-set -g status-interval 60
-## ウィンドウリストの位置を中心寄せにする
-set -g status-justify centre
-## ヴィジュアルノーティフィケーションを有効にする
-setw -g monitor-activity on
-set -g visual-activity on
-## ステータスバーを上部に表示する
+# window status
+setw -g window-status-format " #F#I:#W#F "
+setw -g window-status-current-format " #F#I:#W#F "
+setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
+setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
+setw -g window-status-current-bg colour0
+setw -g window-status-current-fg colour11
+setw -g window-status-current-attr dim
+setw -g window-status-bg green
+setw -g window-status-fg black
+setw -g window-status-attr reverse
+
+# loud or quiet?
+set-option -g visual-activity off
+set-option -g visual-bell off
+set-option -g visual-silence off
+set-window-option -g monitor-activity off
+set-option -g bell-action none
+
+set -g default-terminal "screen-256color"
+
+# The modes {
+setw -g clock-mode-colour colour135
+setw -g mode-attr bold
+setw -g mode-fg colour196
+setw -g mode-bg colour238
+
+# }
+# The panes {
+
+set -g pane-border-bg colour235
+set -g pane-border-fg colour238
+set -g pane-active-border-bg colour236
+set -g pane-active-border-fg colour51
+
+# }
+# The statusbar {
+
 set -g status-position top
+set -g status-bg colour234
+set -g status-fg colour137
+set -g status-attr dim
+set -g status-left '#[fg=brightcyan]#{?client_prefix,#[reverse],}[#(whoami)@#h]'
+set -g status-right '#[fg=colour233,bg=colour245,bold] %Y/%m/%d %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 30
 
+setw -g window-status-current-fg colour81
+setw -g window-status-current-bg colour238
+setw -g window-status-current-attr bold
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+
+setw -g window-status-fg colour138
+setw -g window-status-bg colour235
+setw -g window-status-attr none
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
+setw -g window-status-bell-attr bold
+setw -g window-status-bell-fg colour255
+setw -g window-status-bell-bg colour1
+
+# }
+# The messages {
+
+set -g message-attr bold
+set -g message-fg colour232
+set -g message-bg colour166
+
+# }
