--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,8 +16,8 @@ setw -g pane-base-index 1
 # 設定ファイルをリロードする
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# C-a*2でtmux内のプログラムにC-aを送る
-bind C-a send-prefix
+# C-t*2でtmux内のプログラムにC-aを送る
+bind C-t send-prefix
 
 # | でペインを縦に分割する
 bind | split-window -h
