--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -41,51 +41,9 @@ bind -r L resize-pane -R 5
 
 # マウス操作を有効にする
 set -g mouse on
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-# prefixキーをC-tに変更する
-set -g prefix C-t
-
-# C-bのキーバインドを解除する
-unbind C-b
-
-# キーストロークのディレイを減らす
-set -sg escape-time 1
-
-# ウィンドウのインデックスを1から始める
-set -g base-index 1
-
-# ペインのインデックスを1から始める
-setw -g pane-base-index 1
-
-# 設定ファイルをリロードする
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-# C-a*2でtmux内のプログラムにC-aを送る
-bind C-a send-prefix
-
-# | でペインを縦に分割する
-bind | split-window -h
-
-# - でペインを横に分割する
-bind - split-window -v
-
-# Vimのキーバインドでペインを移動する
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
-
-# Vimのキーバインドでペインをリサイズする
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
-# マウス操作を有効にする
-set -g mouse on
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+set -ga terminal-overrides ',xterm*:smcup@:rmcup@'
+bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 
 # 256色
 set -g default-terminal "screen-256color"
