modify: process when darwin

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -142,4 +142,4 @@ set -g message-bg colour166
 # }
 
 ## macOS 特有
-if-shell "uname | grep -q Darwin" "source-file ./tmux.conf.osx" ""
+if-shell "uname | grep -q Darwin" "source-file ./.tmux.conf.osx" ""
