--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -10,7 +10,6 @@ cask 'vagrant'
 
 brew 'coreutils'
 brew 'curl'
-brew 'fbsimctl', args: ['HEAD']
 brew 'freetype'
 brew 'gibo'
 brew 'git'
@@ -18,6 +17,7 @@ brew 'go'
 brew 'highlight'
 brew 'hub'
 brew 'libevent'
+brew 'libimobiledevice', args: ['HEAD', 'fresh', 'build-from-source']
 brew 'libpng'
 brew 'libtiff'
 brew 'libtool'
