Enable use mouse on tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -42,8 +42,8 @@ bind -r L resize-pane -R 5
 # マウス操作を有効にする
 set -g mouse on
 set -ga terminal-overrides ',xterm*:smcup@:rmcup@'
-bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
-bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 # 256色
 set -g default-terminal "screen-256color"
