Improve zsh settings!

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -5,6 +5,7 @@ tap 'tldr-pages/tldr'
 tap 'facebook/fb'
 
 brew 'coreutils'
+brew 'diff-so-fancy'
 brew 'freetype'
 brew 'gibo'
 brew 'git'
@@ -23,9 +24,9 @@ brew 'oniguruma'
 brew 'openssl'
 brew 'readline'
 brew 'reattach-to-user-namespace'
+brew 'starship'
 brew 'tldr'
 brew 'tree'
 brew 'vim', args: ['with-luajit', 'with-python3']
 brew 'xz'
 brew 'zsh'
-brew 'diff-so-fancy'
