--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,26 +1,42 @@
-tap 'homebrew/cask'
-tap 'tldr-pages/tldr'
-tap 'facebook/fb'
-
-brew 'coreutils'
-brew 'delta'
-brew 'ghq'
-brew 'gibo'
-brew 'git'
-brew 'go'
-brew 'highlight'
-brew 'hub'
-brew 'lua'
-brew 'nkf'
-brew 'npm'
-brew 'openssl'
-brew 'reattach-to-user-namespace'
-brew 'starship'
-brew 'tldr'
-brew 'tree'
-brew 'vim'
-brew 'xz'
-brew 'zsh'
-brew 'bat'
-brew 'exa'
-brew 'git-delta'
+tap "facebook/fb"
+tap "homebrew/bundle"
+tap "homebrew/cask"
+tap "homebrew/cask-fonts"
+tap "homebrew/core"
+tap "iandol/adobe-fonts"
+tap "tldr-pages/tldr"
+brew "openssl@1.1"
+brew "bat"
+brew "xz"
+brew "cocoapods"
+brew "coreutils"
+brew "delta", link: false
+brew "exa"
+brew "tesseract"
+brew "ghq"
+brew "gibo"
+brew "git"
+brew "git-delta"
+brew "git-lfs"
+brew "go"
+brew "lua"
+brew "highlight"
+brew "hub"
+brew "hugo"
+brew "mas"
+brew "node"
+brew "netlify-cli"
+brew "nkf"
+brew "reattach-to-user-namespace"
+brew "scrcpy"
+brew "starship"
+brew "subversion"
+brew "tldr"
+brew "tree"
+brew "vim"
+brew "yarn"
+brew "zsh"
+cask "flutter"
+cask "font-noto-mono-for-powerline"
+cask "font-noto-sans-cjk"
+cask "font-source-han-code-jp"
