--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,24 +1,36 @@
 tap "facebook/fb"
+tap "go-swagger/go-swagger"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/cask-fonts"
 tap "homebrew/core"
 tap "iandol/adobe-fonts"
 tap "tldr-pages/tldr"
-brew "openssl@1.1"
+brew "apr-util"
 brew "bat"
 brew "xz"
+brew "python@3.9"
+brew "glib"
 brew "cocoapods"
 brew "coreutils"
 brew "delta", link: false
 brew "exa"
+brew "gnutls"
+brew "gobject-introspection"
+brew "harfbuzz"
+brew "libass"
 brew "tesseract"
+brew "ffmpeg"
+brew "gdk-pixbuf"
 brew "ghq"
 brew "gibo"
 brew "git"
 brew "git-delta"
 brew "git-lfs"
 brew "go"
+brew "pango"
+brew "librsvg"
+brew "graphviz"
 brew "lua"
 brew "highlight"
 brew "hub"
@@ -26,16 +38,22 @@ brew "hugo"
 brew "mas"
 brew "node"
 brew "netlify-cli"
+brew "nghttp2"
 brew "nkf"
+brew "rbenv-gemset"
 brew "reattach-to-user-namespace"
 brew "scrcpy"
+brew "smartmontools"
 brew "starship"
 brew "subversion"
+brew "swift-format"
+brew "swiftgen"
 brew "tldr"
 brew "tree"
 brew "vim"
 brew "yarn"
 brew "zsh"
+brew "go-swagger/go-swagger/go-swagger"
 cask "flutter"
 cask "font-noto-mono-for-powerline"
 cask "font-noto-sans-cjk"
