--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,13 +1,15 @@
 tap "homebrew/bundle"
-brew "xz"
+brew "asdf"
 brew "bat"
 brew "eza"
 brew "ghq"
 brew "git"
 brew "git-delta"
 brew "highlight"
-brew "hub"
 brew "scrcpy"
 brew "tree"
 brew "vim"
 brew "zsh"
+cask "iandol/adobe-fonts/font-source-han-code-jp"
+cask "font-noto-mono-for-powerline"
+cask "font-noto-sans-cjk"
