--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
-on: pull_request
-
-permissions:
-  contents: read
+on:
+  pull_request:
+    branches:
+      - main
 
 jobs:
   main:
@@ -10,8 +10,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v6
-
-      - name: Setup birdots
+      - name: Run tests
+        env:
+          CI: "true"
         run: |
-          sh -c "$(curl -fsLS get.chezmoi.io)" -- init --apply https://github.com/rnitame/birdots.git
+          brew install bats-core
 
+          bash -c "$(curl -fsLS get.chezmoi.io)" -- init rnitame/birdots --branch ${{github.head_ref}} --apply
+
+          bats -r tests
